<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/logo_uet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv_logo"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:ellipsize="middle"
                android:gravity="center_horizontal"
                android:hint="@string/login_edt_username_hint"
                android:textColor="@android:color/white"
                android:inputType="textCapWords|textPersonName"
                android:singleLine="true"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:ellipsize="middle"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:hint="@string/login_edt_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_btn_login"
                android:text="@string/login_btn"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/login_forgot_password"
            android:color="?attr/colorControlHighlight"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</LinearLayout>